tests/compile_time_tests/tag_attribute_argument_is_not_assignment.stderr
error: proc-macro derive panicked
 --> tests/compile_time_tests/tag_attribute_argument_is_not_assignment.rs:3:10
  |
3 | #[derive(TagName)]
  |          ^^^^^^^
  |
  = help: message: `tag` attribute expectes an assignment expression `[tag(case = "lower" | "upper">]`
